--- a/public/scss/mixins.scss
+++ b/public/scss/mixins.scss
@@ -11,3 +11,10 @@
 	-ms-border-radius: $radius;
 	border-radius: $radius;
 }
+
+@mixin webkit-margin($margin) {
+	-webkit-margin-before: 0px;
+    -webkit-margin-after: 0px;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+}
