--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html
       br
     block content
     script(src='/socket.io/socket.io.js')
-    script(src='http://code.jquery.com/jquery.js')
+    script(src='js/jquery-3.1.1.min.js')
     script(src='/js/lib/adapter.js')
     script(src='/js/client.js')
     include includes/foot.jade
