--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -141,9 +141,16 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
             }
         }
 
-        #videosWrap { display: none; width: 100%; padding: 10px;
-            #videoDisplay {
-                video { display: none; max-width: 100%; width: 320px; }
+        .videoWrap { display: none; width: 100%; height: 75vh; padding-top: $pad;
+            .videoDisplay { width: 100%; height: 100%;
+                #remoteVideo { width: 100%; position: relative; background-color: $black; height: 100%}
+                #localVideo { width: 40%; position: relative; bottom: 120px; float: right; border: solid 4px $red; @include border-radius(20px); margin-right: $pad;}
+                .videoOptions { width: 100%; height: 40px; position: fixed; bottom: 0;
+                    .chat-btn { background-color: $red; color: $white; width: 25%; height: 100%; display: inline-block; border: none; cursor: pointer; vertical-align: top;
+                        &:hover {background-color:$blue;}
+                        img {height: 30px; width: auto; }
+                    }
+                }
             }
         }
     }
